--- a/SynHistoryStates.ini
+++ b/SynHistoryStates.ini
@@ -1,3 +1,4 @@
+E:\dev\viATc\viatc.0.4.1.ahk;enc=0;lex=AutoHotkey;wrap=0;split=1,0;pos1=0,0,0,;sel1=0,0,0,0,0,;fold1=;pos2=0,0,0,;sel2=0,0,0,0,0,;fold2=;bk=;
 E:\dev\totalcmd\Plugins.txt;enc=0;lex=Text files;wrap=0;split=1,0;pos1=74,13,72,;sel1=0,0,0,0,0,;fold1=;pos2=0,0,0,;sel2=0,0,0,0,0,;fold2=;bk=;
 E:\dev\totalcmd\Readme.txt;enc=0;lex=Text files;wrap=0;split=1,0;pos1=0,0,57,;sel1=0,0,0,0,0,;fold1=;pos2=0,0,0,;sel2=0,0,0,0,0,;fold2=;bk=;
 E:\dev\vim\vimqq\vim_tips.txt;enc=0;lex=Text files;wrap=0;split=1,0;pos1=0,0,0,;sel1=0,0,0,0,0,;fold1=;pos2=0,0,0,;sel2=0,0,0,0,0,;fold2=;bk=;
